Version 1.0.0~dev

	* Handle remote service returning empty/mal-formed dict, closes: #5612.
	* Modernize autoconf a bit.
	* Split BasePlugin into a query specific class and a mainloop
	  handling class.

Version 0.8.11 Released on 2011/08/25

	* BaseJob: do not shadow a plugin's own TypeError.

Version 0.8.10 Released on 2011/05/05

	* Added a README.rst.
	* Fix typo in baseplugin.

Version 0.8.9 Released on 2011/04/27

	* Removed tools/gis2spv.py.
	* spvd is now released under the LGPL-2.1.

Version 0.8.8 Released on 2011/04/12

	* More debugging output.

Version 0.8.7 Released on 2011/03/23

	* Add more debugging output.
	* Rename threads of the ThreadPool per plugin for easier log reading.
	* Do not wait on the first loop of the plugin.

Version 0.8.6 Released on 2011/03/18

	* Always try to commit results, closes: #3759.

Version 0.8.5 Released on 2011/01/13

	* Set default check_poll to 60, closes: #3336.
	* New fix for race condition causing duplicate
	  logging output, closes: #3202.
	* Reduce verbosity for exceptions derived from BaseJobRuntimeError,
	  refs: #3415.
	* Add BaseJob.BaseError to reduce verbosity of derived exceptions,
	  closes: #3415.
	* Deprecate set_check_status and except checks to return their status.
	* Try to import python2.6's LoggerAdapter before the one from sjutils.
	* Make BaseJob derive from new style python objects.
	* Use logging.exception for traceback logging.
	* Fix backward compatibility of set_check_status deprecation.
	* Discard results that failed to commit, closes: #3838.
	* Disable deprecation warnings for current release, refs: #3838.

Version 0.8.4 Released on 2010/10/04

	* Fix race condition which causes double/triple logging output,
	  closes: #3532.
	* sjconf: read all [spvd:*] sections, not just [spvd], closes #3498.
	* Do not provide spv-inject since it moved to webengine-spv module.
	* Do not stop daemon on extra configuration section presence.
	* Simplify configuration parsing code, refs: #3308.