@@ -4,6 +4,7 @@ Version 1.0.0~dev
 	* Modernize autoconf a bit.
 	* Split BasePlugin into a query specific class and a mainloop
 	  handling class.
+	* Fix required/optional plugin parameter loading.
 
 Version 0.8.11 Released on 2011/08/25
 
